# zerohash-settlement-health-mcp

./: .env.example  .gitignore  Makefile  PRD_initial-implementation_2026-02-27.md  README.md  pyproject.toml  sample-errors.txt  server_config.json  zh
html/: TSE-IQ_2026-03-03.enc.html
src/zerohash_settlement_health/: __init__.py  config.py  log_parser.py  market_data.py  server.py
src/zerohash_settlement_health/data_source/: __init__.py  base.py  live.py  mock.py
src/zerohash_settlement_health/models/: __init__.py  account.py  incident.py  market.py  trade.py
src/zerohash_settlement_health/runbooks/: __init__.py
src/zerohash_settlement_health/runbooks/data/: auth_failure.yaml  counterparty_default.yaml  insufficient_liquidity.yaml  internal_error.yaml  invalid_input.yaml  rate_limit.yaml  settlement_default.yaml  stale_trade.yaml  unknown_state.yaml  upstream_timeout.yaml
src/zerohash_settlement_health/tools/: __init__.py  check_account_balance.py  check_settlement_health.py  diagnose_errors.py  get_market_prices.py  lookup_trade.py
tests/: test_check_account_balance.py  test_check_settlement_health.py  test_diagnose_errors.py  test_error_handling.py  test_get_market_prices.py  test_lookup_trade.py  test_runbook_matching.py
